# python-clean-architecture-fastapi

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: main.py
app/adapters/: orm.py
app/domain/: todo.py
app/repositories/: base.py  in_memory.py  todo.py
app/schemas/: todo.py
app/services/: todo.py
tests/e2e/: test_todo.py
tests/integration/: test_todo_in_memory_repository.py  test_todo_repository_in_memory.py  test_todo_repository_sql_alchemy.py
tests/unit/domain/: test_todo.py
