[tool.poetry]
name = "python-clean-architecture-fastapi"
version = "0.1.0"
description = ""
authors = ["Fernando Rodrigues <devfernandorodrigues@gmail.com>"]
readme = "README.md"
packages = [{include = "python_clean_architecture_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.254"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
taskipy = "^1.10.3"
faker = "^17.6.0"
pre-commit = "^3.1.1"

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
test = "pytest -s -x -vv"
lint = "isort . && black . && ruff check ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
